<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="advanced_settings">BegoniaParts</string>
    <string name="advanced_settings_summary">Device Specific Customizations</string>
    <string name="display_title">Display</string>
    <string name="vibration_title">Vibration</string>
    <string name="vibration_strength_title">Vibration Strength</string>
    <string name="audio_title">Audio Modification</string>
    <string name="audio_category">Audio</string>
    <string name="headphone_gain">Headphone gain</string>
    <string name="microphone_gain">Microphone gain</string>
    <string name="governor_title">CPU Governor</string>
    <string name="governor_summary">Choose EAS Governor</string>
    <string name="governor_dialogTitle">Choose EAS Governor</string>
    <string name="governor_pwrutilx">pwrutilx</string>
    <string name="governor_blu">blu_schedutil</string>
    <string name="governor_pixutil">pixutil</string>
    <string name="governor_schedutil">schedutil</string>
    <string name="governor_helix">helix_schedutil</string>
    <string name="governor_darkutil">darkutil</string>
    <string name="governor_smurfutil">smurfutil</string>
    <string name="spectrum_profile_title">Performance</string>
    <string name="spectrum_title">Governor Ratio</string>
    <string name="spectrum_summary">Choose a Value</string>
    <string name="spectrum_dialogTitle">Choose a Value</string>
    <string name="spectrum_battery">Battery (1k)</string>
    <string name="spectrum_balance">Balance (3k)</string>
    <string name="spectrum_smooth">Smooth (100k)</string>
    <string name="spectrum_game">Game (200k)</string>
    <string name="spectrum_powerful">Powerful (1m)</string>
    <string name="spectrum_spowerful">Super Powerful (10m)</string>
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
    <string name="dirac_title">Dirac Sound Enhancer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_rb">R and B</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_acoustic">Acoustic</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="viper_title">ViPER4Android FX</string>
    <string name="viper_summary">Enable Viper Sound Enhancer. Also do not forget enable legacy mode in app settings.</string>
    <string name="viper_dialogTitle">Enable Viper Sound Enhancer. Also do not forget enable legacy mode in app settings.</string>
    <string name="james_title">James DSP</string>
    <string name="james_summary">Enable James DSP Audio Manager. Reenable Dirac when you off this.</string>
    <string name="james_dialogTitle">Enable James DSP Audio Manager. Reenable Dirac when you off this.</string>
    <string name="dlb_title">DB FX</string>
    <string name="dlb_summary">Enable DB FX Manager</string>
    <string name="dlb_dialogTitle">Enable DB FX Manager</string>
    <string name="ambient_gesture_haptic_feedback">Haptic feedback</string>
    <string name="ambient_gesture_haptic_feedback_summary">Vibrate when a Ambient gesture is detected</string>
    <string name="category_gesture">Gestures</string>
    <string name="ambient_display_enable_title">Ambient display gestures</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
    <string name="tilt_sensor_title">Tilt sensor</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>
    <string name="codecs_title">Codecs</string>
    <string name="codecs_summary">Codecs priority</string>
    <string name="codecs_dialogTitle">Codecs priority</string>
    <string name="codecs_mtk">МТК/C2</string>
    <string name="codecs_omx">Google OMX</string>
    <string name="cam_title">Camera Variant</string>
    <string name="cam_summary">Reboot after switch</string>
    <string name="cam_dialogTitle">Reboot after switch</string>
    <string name="cam_1">ANX</string>
    <string name="cam_2">ANX + G-cam Burial 8</string>
    <string name="cam_3">Only G-cam Burial 8</string>
    <string name="cam_4">Only G-cam true 64 Mp</string>
    <string name="tcpcongestion_title">TCP Congestion</string>
    <string name="tcpcongestion_summary">Transmission Control Protocol Congestion Algorithm</string>
    <string name="tcpcongestion_dialogTitle">Choose your TCP Congestion Algorithm</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="tcpcongestion_cubic">cubic</string>
    <string name="tcpcongestion_bbr">bbr</string>
    <string name="tcpcongestion_westwood">westwood</string>
    <string name="tcpcongestion_veno">veno</string>
    <string name="tcpcongestion_bic">bic</string>
    <string name="tcpcongestion_illinois">illinois</string>
    <string name="tcpcongestion_htcp">htcp</string>
    <string name="wifi80_title">MTK Wi-Fi Sta2 Mode</string>
    <string name="wifi80_summary">Choose your Wi-Fi mode</string>
    <string name="wifi80_dialogTitle">Choose your Wi-Fi mode</string>
    <string name="usb_title">USB Charging</string>
    <string name="usb_summary">Enable 900 mA USB charging</string>
    <string name="usb_dialogTitle">Enable 900 mA USB charging</string>
    <string name="thermal_title">Disable MI Thermal</string>
    <string name="thermal_summary">It can improve performance but reduce device life.</string>
    <string name="thermal_dialogTitle">It can improve performance but reduce device life.</string>
    <string name="gms_title">Disable Gms Intent Operation Service</string>
    <string name="gms_summary">Switch if you have battery drain issues from Google services. Can break authorization in Google.</string>
    <string name="gms_dialogTitle">Switch if you have battery drain issues from Google services. Can break authorization in Google.</string>
    <string name="wifi80_default">Default (20-40 MHz)</string>
    <string name="wifi80_2">Force 2G/80 MHz</string>
    <string name="wifi80_5">Force 5G/80 MHz</string>
    <string name="wifi80_25">Force 2G+5G/80 Mhz</string>
    <string name="fps_info_title">FPS Info Overlay</string>
    <string name="fps_info_summary">Show current frames per second by overlay</string>
    <string name="vsync_title">V-Sync</string>
    <string name="vsync_summary">V-Sync Disabler(need reboot)</string>
    <string name="vsync_dialogTitle">Vertical Synchronization (need reboot)</string>
    <string name="vsync_enabled">Enabled</string>
    <string name="vsync_disabled">Disabled</string>
    <string name="latch_unsignaled_title">debug.sf.latch_unsignaled</string>
    <string name="latch_unsignaled_summary">Affects the rendering of overlays. The device will reboot after changing.</string>
    <string name="latch_unsignaled_dialogTitle">Affects the rendering of overlays. The device will reboot after changing.</string>
    <string name="pq_title">MTK PQ Service</string>
    <string name="pq_summary">MTK sharping (need reboot)</string>
    <string name="pq_dialogTitle">MTK sharping (need reboot)</string>
    <string name="hw_overlays_title">Disable HW overlays</string>
    <string name="hw_overlays_summary">Always use GPU for screen compositing</string>
    <string name="hw_overlays_dialogTitle">Always use GPU for screen compositing</string>
    <string name="switch_bar_on">On</string>
    <string name="switch_bar_off">Off</string>
    <string name="device_settings_app_name">Advanced settings</string>
    <string name="dirac_qs_tile_title">Dirac Sound</string>
</resources>